# agent-forge

./: .env.example  .gitignore  README.md  plan.MD  pyproject.toml  test.py
src/cli/: main.py  openshell_utils.py
src/config/: IDENTITY.md  configure.sh  sandbox-policy.yaml
src/core/: env_utils.py  master_orchestrator.py  orchestrate.py  planner.py  planner_agent.py  prompt_compiler.py
src/schemas/: TASK.yaml  compiler.yaml  orchestrator.yaml  planner.yaml
